--- a/App/plant_monitoring/pubspec.yaml
+++ b/App/plant_monitoring/pubspec.yaml
@@ -42,6 +42,9 @@ dev_dependencies:
   google_nav_bar: ^5.0.6
   avatar_glow: ^2.0.2
   fl_chart: ^0.63.0
+  percent_indicator: ^4.2.3
+  flutter_svg: ^2.0.7
+  carousel_slider: ^4.2.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
